category and aricle pages updated

--- a/src/pages/Articledetail/articledetail.scss
+++ b/src/pages/Articledetail/articledetail.scss
@@ -3,8 +3,14 @@
 .article_detail {
     padding:20px 0;
 }
+.Youtube-iframe{
 
-
+    height : 300px;
+    width : 700px;
+}
+iframe{
+    height : 700px;
+}
 .aritcle_container {
     display: block;
     position: relative;
